redis-cluster-deployment/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: redis-cluster
  labels:
    name: redis-cluster
    app.kubernetes.io/name: redis-cluster
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: platform-tools
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
